--- a/configurations/TOI4504/TOI-4504_F100.ini
+++ b/configurations/TOI4504/TOI-4504_F100.ini
@@ -35,8 +35,8 @@ comment = F100_withSector97     # You can use this comment for example as diagra
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
 ;action = results_only        # No simulating, no fitting. Just read some results and generate reports.
 results_directory = ../results/mcmc  # All results are saved in the next available numbered subdirectory
-action = single_run          # No fitting. Just a single run of the simulation.
-;action = mcmc
+;action = single_run          # No fitting. Just a single run of the simulation.
+action = mcmc
 ;action = lmfit
 ;action = guifit
 start_date = 2458400         # [days] <float> Date at the start of the simulation. Often called t0. Typically Barycentric Julian Date (TDB).
@@ -65,9 +65,11 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
 
 
 [Fitting]                    # This section is only relevant for running a MCMC algorithm to fit the simulation to real data
+mcmc_multi_processing = False  # Much faster but can be useful to switch it off when debugging. Default: True
 free_parameters = 13         # Number of free parameters in the fitting model. Relevant for calculating p-value from Chi squared.
 ;flux_file = ../data/TOI-4504/TOI4504_transits_0.45d_3-97.csv  # <string> file with flux measurements (real data)
-flux_file = ../data/TOI-4504/TOI4504_transits_0.45d_3-97_wo61.csv  # <string> file with flux measurements (real data)
+;flux_file = ../data/TOI-4504/TOI4504_transits_0.45d_3-97_wo61.csv  # <string> file with flux measurements (real data)
+flux_file = ../data/TOI-4504/TOI4504_tt_incl_early_d.csv  # <string> file with flux measurements (real data)
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
 ;guifit = True                # True for interactive fit via GUI. Default: False
@@ -79,7 +81,7 @@ flux_weight = 1  # weighting flux residuals against rv and tt residuals
 rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
 rv_body = TOI4504
 ;tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
-tt_file = ../data/TOI-4504/tt_without_sector_61.csv # <string> file with measured transit times (real data)
+;tt_file = ../data/TOI-4504/tt_without_sector_61.csv # <string> file with measured transit times (real data)
 tt_weight = 1  # weighting tt residuals against rv and flux residuals
 eclipsers_names = TOI4504c, TOI4504d  # only primary transits by these bodies are relevant when fitting for TT
 eclipsees_names = TOI4504              # only transits eclipsing these bodies are relevant when fitting for TT
@@ -198,7 +200,7 @@ color =     0.01, 0.99, 0.01
 mass =      2.1278 * m_jup,     1.0 * m_jup,      5.0 * m_jup,       0.04 * m_jup
 radius =    1.0 * r_jup,        0.2 * r_jup,      9.9 * r_jup,       1.5 * r_jup
 e =         0.2498,             0.0,              0.5,               0.005
-i =         90.60,              88.0,             92.0,              9.0
+i =         90.0,               87.0,             93.0,              9.0
 P =         41.7878 * day,      40 * day,         43 * day,          0.03 * day
 Omega =     0.24,               -10,              10,                2.7
 omega =     275.80,             100,              460,               4.0
