--- a/configurations/TOI4504/TOI-4504_F100.ini
+++ b/configurations/TOI4504/TOI-4504_F100.ini
@@ -65,7 +65,7 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
 
 
 [Fitting]                    # This section is only relevant for running a MCMC algorithm to fit the simulation to real data
-mcmc_multi_processing = False  # Much faster but can be useful to switch it off when debugging. Default: True
+;mcmc_multi_processing = False  # Much faster but can be useful to switch it off when debugging. Default: True
 free_parameters = 13         # Number of free parameters in the fitting model. Relevant for calculating p-value from Chi squared.
 ;flux_file = ../data/TOI-4504/TOI4504_transits_0.45d_3-97.csv  # <string> file with flux measurements (real data)
 ;flux_file = ../data/TOI-4504/TOI4504_transits_0.45d_3-97_wo61.csv  # <string> file with flux measurements (real data)
@@ -91,10 +91,10 @@ target_flux = 0.985  # Expected normalized flux during transits. Used for a simp
 ;fitting_results_directory = ../results/mcmc  # All MCMC results are saved in the next available numbered subdirectory
 ;backend = T058_backend.h5
 ;load_backend = True
-walkers = 32#512              # Number of mcmc chains
-burn_in = 1#2000             # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
-thin_samples = 1#50          # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
-chunk_size = 1#750          # Every chunk_size steps after burn-in phase, results will be saved.
+walkers = 512              # Number of mcmc chains
+burn_in = 2000             # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+thin_samples = 50          # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
+chunk_size = 500          # Every chunk_size steps after burn-in phase, results will be saved.
 steps = 1e8                # Number of mcmc steps after burn-in phase
 
 moves =  (emcee.moves.StretchMove(a=8.0)     )            # Algorithm emcee uses moves for changing the parameters after each iteration
