--- a/configurations/TOI4504/debug.ini
+++ b/configurations/TOI4504/debug.ini
@@ -73,7 +73,8 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
 mcmc_multi_processing = False  # Much faster but can be useful to switch it off when debugging. Default: True
 free_parameters = 13         # Number of free parameters in the fitting model. Relevant for calculating p-value from Chi squared.
 ;flux_file = ../data/TOI-4504/TOI4504_transits_0.45d_3-97_wo61.csv  # <string> file with flux measurements (real data)
-flux_file = ../data/TOI-4504/TOI4504_tt_incl_early_d.csv  # <string> file with flux measurements (real data)
+flux_file = ../data/TOI-4504/TOI4504_debug.csv  # <string> file with flux measurements (real data)
+;flux_file = ../data/TOI-4504/TOI4504_tt_incl_early_d.csv  # <string> file with flux measurements (real data)
 ;flux_file = ../data/TOI-4504/TOI4504_transits_sm0_3til95.csv  # <string> file with flux measurements (real data)
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
