--- a/configurations/TOI4504/debug.ini
+++ b/configurations/TOI4504/debug.ini
@@ -37,9 +37,9 @@ flux_data_directory = ../data/TOI-4504/fluxdata
 ;action = results_only        # No simulating, no fitting. Just read some results and generate reports.
 results_directory = ../results/debug  # All results are saved in the next available numbered subdirectory
 ;action = get_tess_data       # Download observed flux
-action = process_tess_data   # Normalize observed flux and extract flux during (and around) transits
+;action = process_tess_data   # Normalize observed flux and extract flux during (and around) transits
 ;action = single_run          # No fitting. Just a single run of the simulation.
-;action = mcmc
+action = mcmc
 ;action = lmfit
 ;action = guifit
 ;processed_flux_file = processed_flux_file.csv
@@ -70,7 +70,7 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
 
 
 [Fitting]                    # This section is only relevant for running a MCMC algorithm to fit the simulation to real data
-mcmc_multi_processing = False  # Much faster but can be useful to switch it off when debugging. Default: True
+;mcmc_multi_processing = False  # Much faster but can be useful to switch it off when debugging. Default: True
 free_parameters = 13         # Number of free parameters in the fitting model. Relevant for calculating p-value from Chi squared.
 ;flux_file = ../data/TOI-4504/TOI4504_transits_0.45d_3-97_wo61.csv  # <string> file with flux measurements (real data)
 flux_file = ../data/TOI-4504/TOI4504_debug.csv  # <string> file with flux measurements (real data)
@@ -92,7 +92,7 @@ rv_body = TOI4504
 ;tt_file = ../data/TOI-4504/tt_debug.csv # <string> file with measured transit times (real data)
 ;tt_file = ../data/TOI-4504/tt_no_transit_sectors.csv # <string> file with measured transit times (real data)
 ;tt_file = ../data/TOI-4504/tt_theoretical_early_d_transits.csv # <string> file with measured transit times (real data)
-tt_file = ../data/TOI-4504/tt_incl_early_d.csv # <string> file with measured transit times (real data)
+;tt_file = ../data/TOI-4504/tt_incl_early_d.csv # <string> file with measured transit times (real data)
 
 tt_padding = 0.225  # [days] x-axis (time) in flux plots of single transits goes from TT - tt_padding til TT + tt_padding, default 0.3
 flux_plots_top = 1.01  # y-axis top in normalized flux plots, default 1.015
@@ -104,8 +104,10 @@ target_flux = 0.985  # Expected normalized flux during transits. Used for a simp
                      # times without searching for the precise transit times in the simulated flux
 ;backend = X055_backend.h5
 ;load_backend = True
-walkers = 32             # Number of mcmc chains
+walkers = 512#32             # Number of mcmc chains
 burn_in = 1              # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+thin_samples = 1         # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
+chunk_size = 5           # Every chunk_size steps after burn-in phase, results will be saved.
 steps = 1e7              # Number of mcmc steps after burn-in phase
 
 moves =  (emcee.moves.StretchMove(a=8.0)     )            # Algorithm emcee uses moves for changing the parameters after each iteration
@@ -125,8 +127,6 @@ moves =  (emcee.moves.StretchMove(a=8.0)     )            # Algorithm emcee uses
 # KDEMove: Use MANY walkers!
 # GaussianMove: braucht covarianz als Argument?!?!
 
-thin_samples = 1            # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
-chunk_size = 1             # Every chunk_size steps after burn-in phase, results will be saved.
 bins = 200#, 30              # Number of bins in mcmc histograms. May be several values separated by comma. Then a histogram will be generated for every bin value.
 ;unit = {"mass": "m_earth", "radius": "r_earth", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
 unit = {"mass": "m_jup", "radius": "r_jup", "e": "1", "i": "deg", "P": "d", "a": "AU", "Omega": "deg", "omega": "deg", "pomega": "deg", "L": "deg", "ma": "deg", "ea": "deg", "nu": "deg", "T": "s", "t": "s"}
@@ -213,7 +213,7 @@ color =     0.01, 0.99, 0.01
 mass =      2.1278 * m_jup,     1.0 * m_jup,      5.0 * m_jup,       0.04 * m_jup
 radius =    1.012 * r_jup,      0.2 * r_jup,      4.0 * r_jup,       0.00005 * r_jup
 e =         0.2498,             0.0,              0.5,               0.005
-i =         91.09,              90.00,            92.0,              0.3
+i =         90.00,              88.00,            92.00,             9.00
 P =         41.7878 * day,      40 * day,         43 * day,          0.03 * day
 Omega =     0.24,               -10,              10,                2.7
 omega =     275.80,             100,              460,               4.0
