--- a/configurations/TOI4504/TOI-4504_F101.ini
+++ b/configurations/TOI4504/TOI-4504_F101.ini
@@ -91,10 +91,10 @@ target_flux = 0.985  # Expected normalized flux during transits. Used for a simp
 ;fitting_results_directory = ../results/mcmc  # All MCMC results are saved in the next available numbered subdirectory
 ;backend = T058_backend.h5
 ;load_backend = True
-walkers = 32#512              # Number of mcmc chains
-burn_in = 1#2500             # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
-thin_samples = 1#50          # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
-chunk_size = 5#500          # Every chunk_size steps after burn-in phase, results will be saved.
+walkers = 512              # Number of mcmc chains
+burn_in = 2500             # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
+thin_samples = 50          # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
+chunk_size = 500          # Every chunk_size steps after burn-in phase, results will be saved.
 steps = 1e8                # Number of mcmc steps after burn-in phase
 
 moves =  (emcee.moves.StretchMove(a=8.0)     )            # Algorithm emcee uses moves for changing the parameters after each iteration
