--- a/configurations/TOI4504/debug.ini
+++ b/configurations/TOI4504/debug.ini
@@ -38,8 +38,8 @@ flux_data_directory = ../data/TOI-4504/fluxdata
 results_directory = ../results/debug  # All results are saved in the next available numbered subdirectory
 ;action = get_tess_data       # Download observed flux
 ;action = process_tess_data   # Normalize observed flux and extract flux during (and around) transits
-;action = single_run          # No fitting. Just a single run of the simulation.
-action = mcmc
+action = single_run          # No fitting. Just a single run of the simulation.
+;action = mcmc
 ;action = lmfit
 ;action = guifit
 ;processed_flux_file = processed_flux_file.csv
@@ -73,8 +73,8 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
 ;mcmc_multi_processing = False  # Much faster but can be useful to switch it off when debugging. Default: True
 free_parameters = 13         # Number of free parameters in the fitting model. Relevant for calculating p-value from Chi squared.
 ;flux_file = ../data/TOI-4504/TOI4504_transits_0.45d_3-97_wo61.csv  # <string> file with flux measurements (real data)
-flux_file = ../data/TOI-4504/TOI4504_debug.csv  # <string> file with flux measurements (real data)
-;flux_file = ../data/TOI-4504/TOI4504_tt_incl_early_d.csv  # <string> file with flux measurements (real data)
+;flux_file = ../data/TOI-4504/TOI4504_debug.csv  # <string> file with flux measurements (real data)
+flux_file = ../data/TOI-4504/TOI4504_tt_incl_early_d.csv  # <string> file with flux measurements (real data)
 ;flux_file = ../data/TOI-4504/TOI4504_transits_sm0_3til95.csv  # <string> file with flux measurements (real data)
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
@@ -92,7 +92,7 @@ rv_body = TOI4504
 ;tt_file = ../data/TOI-4504/tt_debug.csv # <string> file with measured transit times (real data)
 ;tt_file = ../data/TOI-4504/tt_no_transit_sectors.csv # <string> file with measured transit times (real data)
 ;tt_file = ../data/TOI-4504/tt_theoretical_early_d_transits.csv # <string> file with measured transit times (real data)
-;tt_file = ../data/TOI-4504/tt_incl_early_d.csv # <string> file with measured transit times (real data)
+tt_file = ../data/TOI-4504/tt_incl_early_d.csv # <string> file with measured transit times (real data)
 
 tt_padding = 0.225  # [days] x-axis (time) in flux plots of single transits goes from TT - tt_padding til TT + tt_padding, default 0.3
 flux_plots_top = 1.01  # y-axis top in normalized flux plots, default 1.015
