--- a/configurations/TOI4504/debug.ini
+++ b/configurations/TOI4504/debug.ini
@@ -206,30 +206,33 @@ limb_darkening_parameter_type = q
 
 
 [TOI4504d]
-body_type = planet
-primary =   TOI-4504
-color =     0.01, 0.99, 0.01
-#           value               lower bound       upper bound        sigma
-mass =      2.1278 * m_jup,     1.0 * m_jup,      5.0 * m_jup,       0.04 * m_jup
-radius =    1.012 * r_jup,      0.2 * r_jup,      4.0 * r_jup,       0.00005 * r_jup
-e =         0.2498,             0.0,              0.5,               0.005
-i =         90.00,              88.00,            92.00,             9.00
-P =         41.7878 * day,      40 * day,         43 * day,          0.03 * day
-Omega =     0.24,               -10,              10,                2.7
-omega =     275.80,             100,              460,               4.0
-ma =        -20.46,             -200,             160,               8.0
+;body_type = planet
+;primary =   TOI-4504
+;color =     0.01, 0.99, 0.01
+;#           value               lower bound       upper bound        sigma
+;mass =      2.1278 * m_jup,     1.0 * m_jup,      5.0 * m_jup,       0.04 * m_jup
+;radius =    1.012 * r_jup,      0.2 * r_jup,      4.0 * r_jup,       0.00005 * r_jup
+;e =         0.2498,             0.0,              0.5,               0.005
+;i =         90.00,              88.00,            92.00,             9.00
+;P =         41.7878 * day,      40 * day,         43 * day,          0.03 * day
+;Omega =     0.24,               -10,              10,                2.7
+;omega =     275.80,             100,              460,               4.0
+;ma =        -20.46,             -200,             160,               8.0
+file = vorne_TOI4504d_hinten
 
 
 [TOI4504c]
-body_type = planet
-primary =   TOI-4504
-color =     0.99, 0.99, 0.01
-#           value               lower bound       upper bound        sigma
-mass =      2.6315 * m_jup,     1.0 * m_jup,      5.0 * m_jup,       0.025 * m_jup
-radius =    0.9897 * r_jup,     0.5 * r_jup,      2.0 * r_jup,       0.2 * r_jup
-e =         0.0377,            0.0,              0.5,               0.0035
-i =         89.69,              89.25,            90.0,              0.3
-P =         81.4631 * day,      80.0 * day,       84 * day,          0.07 * day
-Omega =     0.8,
-omega =     298.89,             200,              400,               6.0
-ma =        142.72,             -30,              330,               6.0
+;body_type = planet
+;primary =   TOI-4504
+;color =     0.99, 0.99, 0.01
+;#           value               lower bound       upper bound        sigma
+;mass =      2.6315 * m_jup,     1.0 * m_jup,      5.0 * m_jup,       0.025 * m_jup
+;radius =    0.9897 * r_jup,     0.5 * r_jup,      2.0 * r_jup,       0.2 * r_jup
+;e =         0.0377,            0.0,              0.5,               0.0035
+;i =         89.69,              89.25,            90.0,              0.3
+;P =         81.4631 * day,      80.0 * day,       84 * day,          0.07 * day
+;Omega =     0.8,
+;omega =     298.89,             200,              400,               6.0
+;ma =        142.72,             -30,              330,               6.0
+file = vorne_TOI4504c_hinten
+
