--- a/configurations/TOI4504/debug.ini
+++ b/configurations/TOI4504/debug.ini
@@ -188,7 +188,7 @@ luminosity = 0.62 * l_sun
 limb_darkening_1 = 0.4765  # paper contains different parameters q1, q2 for different planets. I averaged them. The effective difference is tiny.
 limb_darkening_2 = 0.3495
 limb_darkening_parameter_type = q
-
+;file = debug_TOI4504
 
 ;[TOI4504b]
 ;body_type = planet
@@ -218,21 +218,21 @@ limb_darkening_parameter_type = q
 ;Omega =     0.24,               -10,              10,                2.7
 ;omega =     275.80,             100,              460,               4.0
 ;ma =        -20.46,             -200,             160,               8.0
-file = vorne_TOI4504d_hinten
+file = debug_TOI4504d
 
 
 [TOI4504c]
-;body_type = planet
-;primary =   TOI-4504
-;color =     0.99, 0.99, 0.01
-;#           value               lower bound       upper bound        sigma
-;mass =      2.6315 * m_jup,     1.0 * m_jup,      5.0 * m_jup,       0.025 * m_jup
-;radius =    0.9897 * r_jup,     0.5 * r_jup,      2.0 * r_jup,       0.2 * r_jup
-;e =         0.0377,            0.0,              0.5,               0.0035
-;i =         89.69,              89.25,            90.0,              0.3
-;P =         81.4631 * day,      80.0 * day,       84 * day,          0.07 * day
-;Omega =     0.8,
-;omega =     298.89,             200,              400,               6.0
-;ma =        142.72,             -30,              330,               6.0
-file = vorne_TOI4504c_hinten
+body_type = planet
+primary =   TOI-4504
+color =     0.99, 0.99, 0.01
+#           value               lower bound       upper bound        sigma
+mass =      2.6315 * m_jup,     1.0 * m_jup,      5.0 * m_jup,       0.025 * m_jup
+radius =    0.9897 * r_jup,     0.5 * r_jup,      2.0 * r_jup,       0.2 * r_jup
+e =         0.0377,            0.0,              0.5,               0.0035
+i =         89.69,              89.25,            90.0,              0.3
+P =         81.4631 * day,      80.0 * day,       84 * day,          0.07 * day
+Omega =     0.8,
+omega =     298.89,             200,              400,               6.0
+ma =        142.72,             -30,              330,               6.0
+;file = debug_TOI4504c
 
