--- a/configurations/TOI4504/debug.ini
+++ b/configurations/TOI4504/debug.ini
@@ -177,62 +177,22 @@ rv_dot_width = 1/335         # <float> width of red dot in light curve plot rela
 
 
 [TOI4504]
-body_type = star
-primary = self
-color = 0.99, 0.99, 0.99
-#           value               lower bound       upper bound        sigma
-mass = 927.12 * m_jup,          #850 * m_jup,      1070 * m_jup,       100 * m_jup
-;mass = 0.885 * m_sun,           0.84 * m_sun,     0.94 * m_sun,      0.025 * m_sun
-radius = 0.92 * r_sun
-luminosity = 0.62 * l_sun
-limb_darkening_1 = 0.4765  # paper contains different parameters q1, q2 for different planets. I averaged them. The effective difference is tiny.
-limb_darkening_2 = 0.3495
-limb_darkening_parameter_type = q
-;file = debug_TOI4504
-
-;[TOI4504b]
-;body_type = planet
-;primary =   TOI-4504
-;color =     0.99, 0.01, 0.01
+;body_type = star
+;primary = self
+;color = 0.99, 0.99, 0.99
 ;#           value               lower bound       upper bound        sigma
-;mass =      10.4 * m_earth,   # 1.0 * m_earth,    20.0 * m_earth,    10 * m_earth
-;radius =    2.691 * r_earth,  # 0.01 * r_earth,   5.0 * r_earth,     2.0 * r_earth
-;e =         0                 #
-;i =         86.5,             # 84.0,             89.0,              1.5
-;P =         2.42614 * day,    # 2.426 * day,      2.4263 * day,      0.00005 * day
-;Omega =     0                 #
-;omega =     90                #
-;ma =        303.6,            # 301.25,           306.25,            1
-
+;mass = 927.12 * m_jup,          #850 * m_jup,      1070 * m_jup,       100 * m_jup
+;;mass = 0.885 * m_sun,           0.84 * m_sun,     0.94 * m_sun,      0.025 * m_sun
+;radius = 0.92 * r_sun
+;luminosity = 0.62 * l_sun
+;limb_darkening_1 = 0.4765  # paper contains different parameters q1, q2 for different planets. I averaged them. The effective difference is tiny.
+;limb_darkening_2 = 0.3495
+;limb_darkening_parameter_type = q
+file = debug_TOI4504
 
 [TOI4504d]
-;body_type = planet
-;primary =   TOI-4504
-;color =     0.01, 0.99, 0.01
-;#           value               lower bound       upper bound        sigma
-;mass =      2.1278 * m_jup,     1.0 * m_jup,      5.0 * m_jup,       0.04 * m_jup
-;radius =    1.012 * r_jup,      0.2 * r_jup,      4.0 * r_jup,       0.00005 * r_jup
-;e =         0.2498,             0.0,              0.5,               0.005
-;i =         90.00,              88.00,            92.00,             9.00
-;P =         41.7878 * day,      40 * day,         43 * day,          0.03 * day
-;Omega =     0.24,               -10,              10,                2.7
-;omega =     275.80,             100,              460,               4.0
-;ma =        -20.46,             -200,             160,               8.0
 file = debug_TOI4504d
 
-
 [TOI4504c]
-body_type = planet
-primary =   TOI-4504
-color =     0.99, 0.99, 0.01
-#           value               lower bound       upper bound        sigma
-mass =      2.6315 * m_jup,     1.0 * m_jup,      5.0 * m_jup,       0.025 * m_jup
-radius =    0.9897 * r_jup,     0.5 * r_jup,      2.0 * r_jup,       0.2 * r_jup
-e =         0.0377,            0.0,              0.5,               0.0035
-i =         89.69,              89.25,            90.0,              0.3
-P =         81.4631 * day,      80.0 * day,       84 * day,          0.07 * day
-Omega =     0.8,
-omega =     298.89,             200,              400,               6.0
-ma =        142.72,             -30,              330,               6.0
-;file = debug_TOI4504c
+file = debug_TOI4504c
 
