--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /animations/TOI-4504.fit2.mp4
 /evaluation/rebound.html
 /research/star_systems/TOI-4504/lightkurve/too large/
+/results/debug/
 /src/build/
 /src/curvesimulator/__pychache
 /src/curvesimulator.egg-info/
