--- a/configurations/TOI4504/debug.ini
+++ b/configurations/TOI4504/debug.ini
@@ -38,8 +38,8 @@ flux_data_directory = ../data/TOI-4504/fluxdata
 results_directory = ../results/debug  # All results are saved in the next available numbered subdirectory
 ;action = get_tess_data       # Download observed flux
 ;action = process_tess_data   # Normalize observed flux and extract flux during (and around) transits
-action = single_run          # No fitting. Just a single run of the simulation.
-;action = mcmc
+;action = single_run          # No fitting. Just a single run of the simulation.
+action = mcmc
 ;action = lmfit
 ;action = guifit
 ;processed_flux_file = processed_flux_file.csv
@@ -70,7 +70,7 @@ sim_flux_err = 0.004         # White noise with standard deviation sim_flux_err 
 
 
 [Fitting]                    # This section is only relevant for running a MCMC algorithm to fit the simulation to real data
-;mcmc_multi_processing = False  # Much faster but can be useful to switch it off when debugging. Default: True
+mcmc_multi_processing = False  # Much faster but can be useful to switch it off when debugging. Default: True
 free_parameters = 13         # Number of free parameters in the fitting model. Relevant for calculating p-value from Chi squared.
 ;flux_file = ../data/TOI-4504/TOI4504_transits_0.45d_3-97_wo61.csv  # <string> file with flux measurements (real data)
 ;flux_file = ../data/TOI-4504/TOI4504_debug.csv  # <string> file with flux measurements (real data)
@@ -104,7 +104,7 @@ target_flux = 0.985  # Expected normalized flux during transits. Used for a simp
                      # times without searching for the precise transit times in the simulated flux
 ;backend = X055_backend.h5
 ;load_backend = True
-walkers = 512#32             # Number of mcmc chains
+walkers = 32             # Number of mcmc chains
 burn_in = 1              # Number_of_points_disregarded (burn-in phase). Must be positive. Typically, 1000 is a good value.
 thin_samples = 1         # Keep only every <thin_samples>th sample from the chain to reduce autocorrelation in the chains and the size of the resulting arrays.
 chunk_size = 5           # Every chunk_size steps after burn-in phase, results will be saved.
@@ -177,17 +177,6 @@ rv_dot_width = 1/335         # <float> width of red dot in light curve plot rela
 
 
 [TOI4504]
-;body_type = star
-;primary = self
-;color = 0.99, 0.99, 0.99
-;#           value               lower bound       upper bound        sigma
-;mass = 927.12 * m_jup,          #850 * m_jup,      1070 * m_jup,       100 * m_jup
-;;mass = 0.885 * m_sun,           0.84 * m_sun,     0.94 * m_sun,      0.025 * m_sun
-;radius = 0.92 * r_sun
-;luminosity = 0.62 * l_sun
-;limb_darkening_1 = 0.4765  # paper contains different parameters q1, q2 for different planets. I averaged them. The effective difference is tiny.
-;limb_darkening_2 = 0.3495
-;limb_darkening_parameter_type = q
 file = debug_TOI4504
 
 [TOI4504d]
