--- a/configurations/TOI4504/debug.ini
+++ b/configurations/TOI4504/debug.ini
@@ -21,6 +21,7 @@ day = hour * 24              # [s] One day in seconds
 year = day * 365.24219       # [s] Approximately one tropical earth year in seconds
 rad2deg = 57.29577951308232  # 180 / pi
 
+
 [Results]                    # Comment out the first parameter if you do not need the results (transit times etc.) of the simulation.
 result_file = TOI-4504_debug.json  # <string> simulation results like transit times are saved in this file
 result_dt = 75000            # Real time differences between simulation iterations when calculating transit times.
@@ -31,6 +32,7 @@ max_interval_extensions = 5  # In unstable systems or when using a very large dt
 comment = debug              # You can use this comment for example as diagram title in your result plots
 flux_data_directory = ../data/TOI-4504/fluxdata
 ;verbose = True              # If False, only error messages will be printed to the console. Useful when running MCMC. Default: False
+
 
 [Simulation]                 # Time intervalls and time steps of the simulation
                              # When fitting the simulation to real data, only the parameters start_date and dt are relevant.
@@ -74,7 +76,7 @@ mcmc_multi_processing = False  # Much faster but can be useful to switch it off 
 free_parameters = 13         # Number of free parameters in the fitting model. Relevant for calculating p-value from Chi squared.
 ;flux_file = ../data/TOI-4504/TOI4504_transits_0.45d_3-97_wo61.csv  # <string> file with flux measurements (real data)
 ;flux_file = ../data/TOI-4504/TOI4504_debug.csv  # <string> file with flux measurements (real data)
-flux_file = ../data/TOI-4504/TOI4504_tt_incl_early_d.csv  # <string> file with flux measurements (real data)
+;flux_file = ../data/TOI-4504/TOI4504_tt_incl_early_d.csv  # <string> file with flux measurements (real data)
 ;flux_file = ../data/TOI-4504/TOI4504_transits_sm0_3til95.csv  # <string> file with flux measurements (real data)
                              # flux_file has 3 columns: time [days], normalized flux, normalized flux standard deviation
                              # While fitting, no result file and no video will be generated.
@@ -87,12 +89,12 @@ flux_weight = 1  # weighting flux residuals against rv and tt residuals
 rv_file = ../data/TOI-4504/rv.csv # <string> file with radial velocity measurements (real data)
 rv_body = TOI4504
 
-;tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
+tt_file = ../data/TOI-4504/tt.csv # <string> file with measured transit times (real data)
 ;tt_file = ../data/TOI-4504/tt_without_sector_61.csv # <string> file with measured transit times (real data)
 ;tt_file = ../data/TOI-4504/tt_debug.csv # <string> file with measured transit times (real data)
 ;tt_file = ../data/TOI-4504/tt_no_transit_sectors.csv # <string> file with measured transit times (real data)
 ;tt_file = ../data/TOI-4504/tt_theoretical_early_d_transits.csv # <string> file with measured transit times (real data)
-tt_file = ../data/TOI-4504/tt_incl_early_d.csv # <string> file with measured transit times (real data)
+;tt_file = ../data/TOI-4504/tt_incl_early_d.csv # <string> file with measured transit times (real data)
 
 tt_padding = 0.225  # [days] x-axis (time) in flux plots of single transits goes from TT - tt_padding til TT + tt_padding, default 0.3
 flux_plots_top = 1.01  # y-axis top in normalized flux plots, default 1.015
@@ -145,6 +147,7 @@ frames = 20                  # <int> number of frames of video. Proportional to 
 fps = 10                     # <int> frames per second in video. Proportional to the velocity of the
                              # objects in the animation. Inverse proportional to length of video.
 
+
 [Scale]                      # This section controls the size of objects in the animation.
 scope_left = 0.4 * au        # [m] <float> scope of left plotting window is [-scope_left, scope_left].
                              # Middle of window is (0.0, 0.0)
@@ -165,6 +168,7 @@ max_radius = 2.0             # [%] <float> (if autoscale on) maximum radius of l
                              # relative to plot scope. radius=100 would fill the whole plot.
                              # If necessary, scaling will be done logarithmically instead of linear.
 
+
 [Plot]                       # Adjust the plot parameters in this section only if the plots in the video do not fit your screen
 figure_width = 16            # <int>   width of figure which contains all plots and animations
 figure_height = 8            # <int>   height of figure which contains all plots and animations
@@ -177,11 +181,48 @@ rv_dot_width = 1/335         # <float> width of red dot in light curve plot rela
 
 
 [TOI4504]
-file = debug_TOI4504
+;file = debug_TOI4504
+body_type = star
+primary = self
+color = 0.99, 0.99, 0.99
+#           value               lower bound       upper bound        sigma
+mass = 927.12 * m_jup,          #850 * m_jup,      1070 * m_jup,       100 * m_jup
+;mass = 0.885 * m_sun,           0.84 * m_sun,     0.94 * m_sun,      0.025 * m_sun
+radius = 0.92 * r_sun
+luminosity = 0.62 * l_sun
+limb_darkening_1 = 0.4765  # paper contains different parameters q1, q2 for different planets. I averaged them. The effective difference is tiny.
+limb_darkening_2 = 0.3495
+limb_darkening_parameter_type = q
+
 
 [TOI4504d]
-file = debug_TOI4504d
+;file = debug_TOI4504d
+body_type = planet
+primary =   TOI-4504
+color =     0.01, 0.99, 0.01
+#           value               lower bound       upper bound        sigma
+mass =      2.1278 * m_jup,     1.0 * m_jup,      5.0 * m_jup,       0.04 * m_jup
+radius =    0.95 * r_jup,       0.2 * r_jup,      2.0 * r_jup,       0.2 * r_jup
+e =         0.2498,             0.0,              0.5,               0.005
+i =         88.8,               88.5,             89.1,              0.1
+P =         41.7878 * day,      41.75 * day,      41.85 * day,       0.015 * day
+Omega =     2.5,                0,                6,                 2
+omega =     275.80,             100,              460,               4.0
+ma =        -20.46,             -200,             160,               8.0
+
 
 [TOI4504c]
-file = debug_TOI4504c
+;file = debug_TOI4504c
+body_type = planet
+primary =   TOI-4504
+color =     0.99, 0.99, 0.01
+#           value               lower bound       upper bound        sigma
+mass =      2.6315 * m_jup,     1.0 * m_jup,      5.0 * m_jup,       0.025 * m_jup
+radius =    1.07 * r_jup,       0.8 * r_jup,      1.2 * r_jup,       0.03 * r_jup
+e =         0.0377,             0.0,              0.5,               0.0035
+i =         89.66,              89.4,             90.0,              0.03
+P =         81.4631 * day,      81.4 * day,       81.5 * day,        0.03 * day
+Omega =     0.8,
+omega =     298.89,             200,              400,               6.0
+ma =        142.72,             -30,              330,               6.0
 
